# openkb-core

./: .gitignore  CODEOWNERS  README.md  cli.py  config.py  converter.py  images.py  indexer.py  lint.py  locks.py  log.py  pyproject.toml  schema.py  state.py  tree_renderer.py  watcher.py
.github/workflows/: ci.yml  publish.yml
agent/: __init__.py  _markdown.py  chat.py  chat_session.py  compiler.py  linter.py  query.py  skill_runner.py  tools.py
deck/: __init__.py  creator.py
docs/: UPSTREAM_SYNC.md
openkb/: __init__.py  config.py  frontmatter.py  images.py  lint.py  url_ingest.py
openkb/agent/: _markdown.py  linter.py  skills.py
openkb/deck/: validator.py
openkb/skill/: creator.py  tools.py
skill/: evaluator.py  generator.py
