[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openkb-core"
dynamic = ["version"]
description = "OpenKB: Open LLM Knowledge Base, powered by PageIndex"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kylin", email = "quanqi@pageindex.ai"},
    {name = "Ray", email = "ray@vectify.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "rag", "retrieval", "knowledge-base", "llm", "pageindex", "agents", "document"]
# All dependencies are pinned exactly (supply-chain caution).
dependencies = [
    "pageindex==0.3.0.dev1",
    "markitdown[docx,pptx,xlsx,xls]==0.1.5",
    "trafilatura==2.0.0",
    "click==8.4.0",
    "watchdog==6.0.0",
    "litellm==1.87.2",
    "openai-agents==0.17.3",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "json-repair==0.59.10",
    "prompt_toolkit==3.0.52",
    "rich==15.0.0",
    "portalocker==3.2.0",
]

[project.urls]
Repository = "https://github.com/ppatel-skillsoft/openkb-core"
Upstream = "https://github.com/VectifyAI/OpenKB"

[project.scripts]
openkb = "openkb.cli:cli"

[project.optional-dependencies]
db = [
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
]
api = [
    "fastapi==0.137.2",
    "uvicorn[standard]==0.49.0",
    "azure-storage-blob[aio]==12.24.0",
    "pydantic-settings==2.10.1",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "anyio==4.14.0",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
# Distribution name is openkb-core; the importable package remains openkb.
packages = ["openkb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
